@startuml

entity vehicles {
  * id : uuid [PK]
  --
  * brand : varchar(100)
  * model : varchar(100)
  * year : integer
  * version : varchar(100)
  * transmission : varchar(50)
  * fuel_type : varchar(50)
  * fipe_key : varchar(255)
  * created_at : timestamp
}

entity listings {
  * id : uuid [PK]
  --
  * vehicle_id : uuid [FK]
  * marketplace : varchar(50)
  * listing_price : decimal(12,2)
  * currency : varchar(10)
  * mileage : integer
  * condition : varchar(50)
  * url : text
  * description : text
  * seller_name : varchar(100)
  * seller_rating : decimal(3,2)
  * is_duplicate : boolean
  * created_at : timestamp
  * scraped_at : timestamp
  * updated_at : timestamp
}

entity opportunities {
  * id : uuid [PK]
  --
  * listing_id : uuid [FK]
  * fipe_price : decimal(12,2)
  * discount_pct : decimal(5,2)
  * discount_amount : decimal(12,2)
  * score : integer
  * status : varchar(50)
  * carwizard_id : varchar(255)
  * created_at : timestamp
  * updated_at : timestamp
}

entity alerts {
  * id : uuid [PK]
  --
  * opportunity_id : uuid [FK]
  * channel : varchar(50)
  * recipient : varchar(255)
  * status : varchar(50)
  * message : text
  * sent_at : timestamp
  * error_message : text
  * retry_count : integer
  * created_at : timestamp
  * updated_at : timestamp
}

entity alert_history {
  * id : uuid [PK]
  --
  * opportunity_id : uuid [FK]
  * alert_id : uuid [FK]
  * channel : varchar(50)
  * status : varchar(50)
  * timestamp : timestamp
}

entity price_cache {
  * id : uuid [PK]
  --
  * vehicle_key : varchar(255)
  * fipe_price : decimal(12,2)
  * cached_at : timestamp
  * expires_at : timestamp
}

entity scrape_logs {
  * id : uuid [PK]
  --
  * marketplace : varchar(50)
  * start_time : timestamp
  * end_time : timestamp
  * listings_found : integer
  * listings_saved : integer
  * error_message : text
  * status : varchar(50)
}

entity opportunity_logs {
  * id : uuid [PK]
  --
  * listing_id : uuid [FK]
  * action : varchar(100)
  * details : text
  * timestamp : timestamp
}

' === RELATIONSHIPS ===

vehicles ||--o{ listings : has
listings ||--o{ opportunities : produces
listings ||--o{ opportunity_logs : logs
opportunities ||--o{ alerts : triggers
opportunities ||--o{ alert_history : records
alert_history ||--o| alerts : documents
price_cache ||--o{ vehicles : caches

note top of vehicles
  Core vehicle master data
  Used for FIPE lookups and deduplication
end note

note top of listings
  Raw marketplace listings
  Source data from scrapers
end note

note top of opportunities
  Qualified opportunities
  After FIPE comparison and scoring
end note

note top of alerts
  Alert records for each notification
  Tracks delivery status and retries
end note

note top of alert_history
  Audit trail of all alert activities
  For tracking and analytics
end note

note top of price_cache
  FIPE price cache
  24-hour TTL to reduce API calls
end note

note top of scrape_logs
  Scraping job history
  For monitoring and debugging
end note

note top of opportunity_logs
  Opportunity state change tracking
  For audit and analytics
end note

@enduml
